@@ -11,6 +11,9 @@
       <object class="wxMenuItem" name="menu_new">
         <label>_New catalog...</label>
       </object>
+      <object class="wxMenuItem" name="menu_new_from_pot">
+        <label>New catalog from POT file...</label>
+      </object>
       <object class="wxMenuItem" name="menu_open">
         <label>_Open</label>
         <accel>Ctrl-O</accel>
