@@ -3,6 +3,7 @@ Version 1.3.2
 -------------
 
 - fixed bogus warnings when updating from a POT file
+- added "New catalog from POT file" feature
 - added Korean translation (Hojin Choi)
 
 
